[package]
name = "actix-mq-network"
version = "0.1.0"
authors = ["Evgeny Ukhanov <mrlsd@ya.ru>"]
edition = "2018"

[[bin]]
name = "node"
path = "src/node.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "config"
path = "src/config.rs"

[dependencies]
actix = "0.7"
tokio = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
futures = "0.1"

bytes = "0.4"
byteorder = "1.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.5"
sodiumoxide = "0.2"
hex = "0.3"
toml = "0.4"